Fix backgound image overlap

--- a/style.css
+++ b/style.css
@@ -17,11 +17,16 @@ nav {
   z-index: 1;
 }
 
-nav .name {
+nav .logo {
   color: #fff;
   font-family: BlinkMacSystemFont, 'Segoe UI', 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: bold;
+  text-decoration: none;
+}
+
+nav .logo:hover {
+  color: #ff6b00;
 }
 
 .ddl-menu {
@@ -48,7 +53,7 @@ nav .name {
 /* Main content */
 
 /* Header */
-header {
+.header {
   background-color: #1c1a19;
   display: flex;
   flex-direction: column;
@@ -100,4 +105,10 @@ header {
   right: 0%;
   top: 39%;
   -webkit-user-drag: none;
+}
+
+@media all and (max-width: 370px) {
+  .partial-header-bg-img {
+    display: none;
+  }
 }
